# zeegat

./: LICENSE  README.md  pyproject.toml
tests/: test_zeegat.py
zeegat/: __init__.py  frame.py  interfaces.py  messages.py  services.py
